fix: align squad colors with theme colors (#2247)
Re-align squad colors with theme colors for future options

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -155,13 +155,8 @@ body {
   --theme-color-onion: theme('colors.onion.40');
   --theme-color-water: theme('colors.water.40');
   --theme-color-salt: theme('colors.salt.40');
+  --theme-color-pepper: theme('colors.pepper.40');
   --theme-color-email: theme('colors.pepper.10');
-
-  --theme-squads-avocado: theme('colors.avocado.10');
-  --theme-squads-bacon: theme('colors.bacon.60');
-  --theme-squads-cabbage: theme('colors.cabbage.20');
-  --theme-squads-onion: theme('colors.onion.90');
-  --theme-squads-pepper: theme('colors.pepper.10');
 }
 
 @define-mixin light-mode {
@@ -285,6 +280,7 @@ body {
   --theme-color-onion: theme('colors.onion.60');
   --theme-color-water: theme('colors.water.60');
   --theme-color-salt: theme('colors.pepper.40');
+  --theme-color-pepper: theme('colors.pepper.60');
   --theme-color-email: theme('colors.pepper.10');
 }
 
